--- a/appWarmaster/src/estilos/login.css
+++ b/appWarmaster/src/estilos/login.css
@@ -26,6 +26,10 @@
   }
 }
 
+.login-modal-overlay.hidden-temp {
+    visibility: hidden;
+}
+
 /* ===== CONTENIDO DEL MODAL ===== */
 .login-modal-content {
   background: white;
